--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "griddle-react",
-  "version": "0.6.0",
+  "name": "griddle-react-events",
+  "version": "0.1.0",
   "description": "Griddle - A fast and flexible grid component for React.",
   "keywords": [
     "react-component",
