--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "karma-webpack": "^1.7.0",
     "phantomjs-polyfill": "0.0.1",
     "phantomjs-prebuilt": "^2.1.7",
-    "react": "^0.14.3 || ^15.0.1",
-    "react-addons-test-utils": "^0.14.3 || ^15.0.1",
+    "react": "^15.1.0",
+    "react-addons-test-utils": "^15.0.1",
     "react-chartist": "^0.10.2",
-    "react-dom": "^0.14.3 || ^15.0.1",
+    "react-dom": "^15.0.1",
     "webpack": "1.12.3",
     "webpack-dev-server": "1.12.1"
   },
