--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "griddle-react-events",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Griddle - A fast and flexible grid component for React.",
   "keywords": [
     "react-component",
@@ -11,7 +11,7 @@
   ],
   "main": "modules/griddle.jsx.js",
   "peerDependencies": {
-    "react": "^0.14.3 || ^15.0.1"
+    "react": "^15.1.0"
   },
   "dependencies": {
     "lodash": "^4.12.0"
@@ -42,8 +42,8 @@
     "react-addons-test-utils": "^15.0.1",
     "react-chartist": "^0.10.2",
     "react-dom": "^15.0.1",
-    "webpack": "1.12.3",
-    "webpack-dev-server": "1.12.1"
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   },
   "scripts": {
     "test": "karma start --browsers PhantomJS",
